# auto-uploader

./: .gitignore  config.toml  main.py  pyproject.toml
.cursor/rules/: api-testing.mdc  confidence.mdc  development-guidelines.mdc  docker-traefik.mdc  fastapi-app.mdc  microservice.mdc  module-access-control.mdc  module-auth.mdc  module-identity.mdc  module-integration.mdc  module-tenant.mdc  project-overview.mdc  project-structure.mdc  project.mdc  pydantic.mdc  python-rules.mdc  test-coverage.mdc  test-fixtures.mdc
src/: basic.py  config.py  imagetools.py  login.py  main.py  services.py  uploader.py
tmp/: dicts.json  excel_1404-03-06_1_tKIB2S.xlsx  excel_1404-03-06_2_tKIB2S.xlsx
